// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--show-config > should show config 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello --show-config
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] {
  "cache": true,
  "footer": false,
  "summary": false,
  "parallel": false,
  "logLevel": "log",
  "cleanCache": false,
  "showConfig": true,
  "excludedTasks": [],
  "isWorkerThread": false,
  "maxWorkers": 1,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "project": {
    "workspaces": [],
    "packageManager": "npm",
    "rootWorkspace": {
      "relativePath": ".",
      "id": "root",
      "absolutePath": "/ROOT/test/__fixtures__/main",
      "label": ""
    }
  },
  "cacheDir": "/ROOT/test/__fixtures__/main/.nadle",
  "configFile": "/ROOT/test/__fixtures__/main/nadle.config.ts",
  "minWorkers": 1
}
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`--show-config > should show config with extra options 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --no-footer hello --show-config --min-workers 2 --max-workers 3
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] {
  "cache": true,
  "footer": false,
  "summary": false,
  "parallel": false,
  "logLevel": "log",
  "cleanCache": false,
  "showConfig": true,
  "excludedTasks": [],
  "isWorkerThread": false,
  "minWorkers": 2,
  "maxWorkers": 3,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "project": {
    "workspaces": [],
    "packageManager": "npm",
    "rootWorkspace": {
      "relativePath": ".",
      "id": "root",
      "absolutePath": "/ROOT/test/__fixtures__/main",
      "label": ""
    }
  },
  "cacheDir": "/ROOT/test/__fixtures__/main/.nadle",
  "configFile": "/ROOT/test/__fixtures__/main/nadle.config.ts"
}
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;
